--- a/package.json
+++ b/package.json
@@ -44,9 +44,11 @@
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
     "dotenv": "16.4.7",
+    "ioredis": "5.7.0",
     "passport": "0.7.0",
     "passport-jwt": "4.0.1",
     "pg": "8.14.1",
+    "rate-limiter-flexible": "7.2.0",
     "reflect-metadata": "0.1.14",
     "rxjs": "7.8.2",
     "typeorm": "0.3.21",
