--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@nestjs/platform-express": "10.4.15",
     "@nestjs/schedule": "4.1.2",
     "@nestjs/swagger": "7.4.2",
+    "@nestjs/terminus": "11.0.0",
     "@nestjs/throttler": "5.2.0",
     "@nestjs/typeorm": "10.0.2",
     "bcrypt": "5.1.1",
@@ -52,7 +53,7 @@
     "reflect-metadata": "0.1.14",
     "rxjs": "7.8.2",
     "typeorm": "0.3.21",
-    "uuid": "9.0.1"
+    "uuid": "11.1.0"
   },
   "devDependencies": {
     "@nestjs/cli": "10.4.9",
