--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "bullmq": "4.18.2",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
+    "cockatiel": "3.2.1",
     "dotenv": "16.4.7",
     "ioredis": "5.7.0",
     "passport": "0.7.0",
